--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <h2>Mijn pagina's!</h2>
         <p>Hieronder ontdek je al mijn websites.</p>
         <ul>
-          <li><a href="Matthias_Neven-artikel/" target="_blank">Artikel</a></li>
-          <li><a href="Matthias_Neven-htmlmatchapp/" target="_blank">Matchapp</a></li>
-          <li><a href="bandsite/" target="_blank">Bandsite</a></li>
-          <li><a href=".." target="_blank">. . .</a></li>
+          <li><a href="Matthias_Neven-artikel/" target="blank">Artikel</a></li>
+          <li><a href="Matthias_Neven-htmlmatchapp/" target="blank">Matchapp</a></li>
+          <li><a href="bandsite/" target="blank">Bandsite</a></li>
+          <li><a href=".." target="blank">. . .</a></li>
         </ul>
       </div>
     </section>
