--- a/brandshop/index.html
+++ b/brandshop/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>spookyloops official merch page</title>
+    <title>Skellet merch page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
     <header>
         <div class="flex-container">
-            <div>logo</div>
+            <div><img src="svg/skillet.svg" alt="logo"></div>
             <nav>
                 <ul>
                     <li><a href="">Kids</a></li>
@@ -19,7 +20,10 @@
                     <li><a href="">Farts</a></li>
                 </ul>
             </nav>
-            <div>zoekveld en icons</div>
+            <div><i class="fa-solid fa-magnifying-glass"></i><input type="text"
+                placeholder="zoeken">
+    <i class="fa-solid fa-cart-shopping"></i>
+            </div>
         </div>
     </header>
 </body>
