--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="Matthias_Neven-artikel/" target="blank">Artikel</a></li>
           <li><a href="Matthias_Neven-htmlmatchapp/" target="blank">Matchapp</a></li>
           <li><a href="bandsite/" target="blank">Bandsite</a></li>
-          <li><a href=".." target="blank">. . .</a></li>
+          <li><a href="brandshop/" target="blank">Brandshop</a></li>
         </ul>
       </div>
     </section>
