--- a/brandshop/index.html
+++ b/brandshop/index.html
@@ -28,3 +28,24 @@
     </header>
 </body>
 </html>
+
+
+<main>
+    <video src=""></video>
+</main>
+
+<div class="flex-container">
+    <div class="flex-item">
+      <img src="static/img/productfoto-1.webp" alt="productfoto">
+      <div class="flex-container">
+        <div><h3>Top Sneaker</h3><p>Herenschoen</p></div>
+        <p>€ 129,99</p>
+      </div>
+    </div>
+    <div class="flex-item">
+     <img src="" alt="">
+    </div>
+    <div class="flex-item">
+     ...
+    </div>
+  </div>
