--- a/brandshop/index.html
+++ b/brandshop/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
+
 <body>
     <header>
         <div class="flex-container">
@@ -20,32 +22,50 @@
                     <li><a href="">Farts</a></li>
                 </ul>
             </nav>
-            <div><i class="fa-solid fa-magnifying-glass"></i><input type="text"
-                placeholder="zoeken">
-    <i class="fa-solid fa-cart-shopping"></i>
+            <div><i class="fa-solid fa-magnifying-glass"></i><input type="text" placeholder="zoeken">
+                <i class="fa-solid fa-cart-shopping"></i>
             </div>
         </div>
     </header>
+
+    <main>
+        <video src=""></video>
+
+        <div class="flex-container">
+            <div class="flex-item">
+                <img src="skillet merch/T.jpg" alt="productfoto">
+                <div class="flex-container">
+                    <div>
+                        <h3>Top Sneaker</h3>
+                        <p>Herenschoen</p>
+                    </div>
+                    <p>€ 129,99</p>
+                </div>
+            </div>
+            <div class="flex-item">
+                <img src="skillet merch/T.jpg" alt="productfoto">
+                <div class="flex-container">
+                    <div>
+                        <h3>Top Sneaker</h3>
+                        <p>Herenschoen</p>
+                    </div>
+                    <p>€ 129,99</p>
+                </div>
+            </div>
+            <div class="flex-item">
+                <img src="skillet merch/T.jpg" alt="productfoto">
+                <div class="flex-container">
+                    <div>
+                        <h3>Top Sneaker</h3>
+                        <p>Herenschoen</p>
+                    </div>
+                    <p>€ 129,99</p>
+                </div>
+            </div>
+        </div>
+
+    </main>
+
 </body>
+
 </html>
-
-
-<main>
-    <video src=""></video>
-</main>
-
-<div class="flex-container">
-    <div class="flex-item">
-      <img src="static/img/productfoto-1.webp" alt="productfoto">
-      <div class="flex-container">
-        <div><h3>Top Sneaker</h3><p>Herenschoen</p></div>
-        <p>€ 129,99</p>
-      </div>
-    </div>
-    <div class="flex-item">
-     <img src="" alt="">
-    </div>
-    <div class="flex-item">
-     ...
-    </div>
-  </div>
