--- a/brandshop/index.html
+++ b/brandshop/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
-
+<div class="videoframe">
+    <video autoplay loop muted src="div class="videoframe>
+    <video autoplay loop muted src="static/video/trailer.mp4"></video>
+</div>
 <body>
     <header>
         <div class="flex-container">
@@ -27,7 +30,6 @@
             </div>
         </div>
     </header>
-
     <main>
         <video src=""></video>
 
@@ -36,34 +38,48 @@
                 <img src="skillet merch/T.jpg" alt="productfoto">
                 <div class="flex-container">
                     <div>
-                        <h3>Top Sneaker</h3>
-                        <p>Herenschoen</p>
+                        <h3>Logo met kruis</h3>
+                        <p>Heren T-shirt</p>
                     </div>
-                    <p>€ 129,99</p>
+                    <p>€ 36,99</p>
                 </div>
             </div>
             <div class="flex-item">
-                <img src="skillet merch/T.jpg" alt="productfoto">
+                <img src="skillet merch/T1.jpg" alt="productfoto">
                 <div class="flex-container">
                     <div>
-                        <h3>Top Sneaker</h3>
-                        <p>Herenschoen</p>
+                        <h3>Logo</h3>
+                        <p>Heren T-shirt</p>
                     </div>
-                    <p>€ 129,99</p>
+                    <p>€ 33,99</p>
                 </div>
             </div>
             <div class="flex-item">
-                <img src="skillet merch/T.jpg" alt="productfoto">
+                <img src="skillet merch/T2.jpg" alt="productfoto">
                 <div class="flex-container">
                     <div>
-                        <h3>Top Sneaker</h3>
-                        <p>Herenschoen</p>
+                        <h3>Logo met skillettenhoofd</h3>
+                        <p>Heren T-shirt</p>
                     </div>
-                    <p>€ 129,99</p>
+                    <p>€ 38,99</p>
                 </div>
             </div>
         </div>
-
+        <section id="membership">
+            <h2>
+                Join us!
+            </h2>
+            <div class="flex-container highlight"></div>
+                <div class="flex-item">
+                    <h3>
+                        Word member!
+                    </h3>
+                    <p>
+                        een verkooptekstje
+                    </p>
+                    <div class="flex-item"></div>
+                </div>
+        </section>
     </main>
 
 </body>
