--- a/brandshop/index.html
+++ b/brandshop/index.html
@@ -9,10 +9,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
-<div class="videoframe">
-    <video autoplay loop muted src="div class="videoframe>
-    <video autoplay loop muted src="static/video/trailer.mp4"></video>
-</div>
 <body>
     <header>
         <div class="flex-container">
@@ -31,8 +27,10 @@
         </div>
     </header>
     <main>
+        <div class="videoframe">
+            <video autoplay loop muted src="brandshop/Desktop_Header_1_1.mp4"></video>
+        </div>
         <video src=""></video>
-
         <div class="flex-container">
             <div class="flex-item">
                 <img src="skillet merch/T.jpg" alt="productfoto">
@@ -81,7 +79,5 @@
                 </div>
         </section>
     </main>
-
 </body>
-
 </html>
