--- a/brandshop/index.html
+++ b/brandshop/index.html
@@ -27,10 +27,35 @@
         </div>
     </header>
     <main>
-        <div class="videoframe">
-            <video autoplay loop muted src="brandshop/Desktop_Header_1_1.mp4"></video>
-        </div>
-        <video src=""></video>
+        <section id="video">
+            <div class="videoframe">
+                <video autoplay loop muted src="static/video/trailer.mp4"></video>
+            </div>
+        </section>
+        <section>
+            <figure>
+                <img src="brandshop/skillet merch/T.jpg" alt="categorie">
+                <figcaption>
+                    <span>Categorie</span>
+                </figcaption>
+            </figure>
+        </section>
+        <section>
+            <figure>
+                <img src="brandshop/skillet merch/T1.jpg" alt="categorie">
+                <figcaption>
+                    <span>Categorie</span>
+                </figcaption>
+            </figure>
+        </section>
+        <section>
+            <figure>
+                <img src="brandshop/skillet merch/T2.jpg" alt="categorie">
+                <figcaption>
+                    <span>Categorie</span>
+                </figcaption>
+            </figure>
+        </section>
         <div class="flex-container">
             <div class="flex-item">
                 <img src="skillet merch/T.jpg" alt="productfoto">
