--- a/brandshop/index.html
+++ b/brandshop/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
+
 <body>
     <header>
         <div class="flex-container">
@@ -29,80 +30,83 @@
     <main>
         <section id="video">
             <div class="videoframe">
-                <video autoplay loop muted src="static/video/trailer.mp4"></video>
+                <video autoplay loop muted src="Desktop_Header_1_1.mp4"></video>
             </div>
         </section>
-        <section>
-            <figure>
-                <img src="brandshop/skillet merch/T.jpg" alt="categorie">
-                <figcaption>
-                    <span>Categorie</span>
-                </figcaption>
-            </figure>
+        <section id="categorien">
+            <div class="flex-container">
+
+                <figure>
+                    <img src="skillet merch/T.jpg" alt="Men">
+                    <figcaption>
+                        <span>Men</span>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="skillet merch/T1.jpg" alt="women">
+                    <figcaption>
+                        <span>Woman</span>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="skillet merch/T2.jpg" alt="Kids">
+                    <figcaption>
+                        <span>Kids</span>
+                    </figcaption>
+                </figure>
+            </div>
+            
         </section>
-        <section>
-            <figure>
-                <img src="brandshop/skillet merch/T1.jpg" alt="categorie">
-                <figcaption>
-                    <span>Categorie</span>
-                </figcaption>
-            </figure>
-        </section>
-        <section>
-            <figure>
-                <img src="brandshop/skillet merch/T2.jpg" alt="categorie">
-                <figcaption>
-                    <span>Categorie</span>
-                </figcaption>
-            </figure>
-        </section>
-        <div class="flex-container">
-            <div class="flex-item">
-                <img src="skillet merch/T.jpg" alt="productfoto">
-                <div class="flex-container">
-                    <div>
-                        <h3>Logo met kruis</h3>
-                        <p>Heren T-shirt</p>
+        <section id="featured">
+            <div class="flex-container">
+                <div class="flex-item">
+                    <img src="skillet merch/T.jpg" alt="productfoto">
+                    <div class="flex-container">
+                        <div>
+                            <h3>Logo met kruis</h3>
+                            <p>Heren T-shirt</p>
+                        </div>
+                        <p>€ 36,99</p>
                     </div>
-                    <p>€ 36,99</p>
+                </div>
+                <div class="flex-item">
+                    <img src="skillet merch/T1.jpg" alt="productfoto">
+                    <div class="flex-container">
+                        <div>
+                            <h3>Logo</h3>
+                            <p>Heren T-shirt</p>
+                        </div>
+                        <p>€ 33,99</p>
+                    </div>
+                </div>
+                <div class="flex-item">
+                    <img src="skillet merch/T2.jpg" alt="productfoto">
+                    <div class="flex-container">
+                        <div>
+                            <h3>Logo met skillettenhoofd</h3>
+                            <p>Heren T-shirt</p>
+                        </div>
+                        <p>€ 38,99</p>
+                    </div>
                 </div>
             </div>
-            <div class="flex-item">
-                <img src="skillet merch/T1.jpg" alt="productfoto">
-                <div class="flex-container">
-                    <div>
-                        <h3>Logo</h3>
-                        <p>Heren T-shirt</p>
-                    </div>
-                    <p>€ 33,99</p>
-                </div>
-            </div>
-            <div class="flex-item">
-                <img src="skillet merch/T2.jpg" alt="productfoto">
-                <div class="flex-container">
-                    <div>
-                        <h3>Logo met skillettenhoofd</h3>
-                        <p>Heren T-shirt</p>
-                    </div>
-                    <p>€ 38,99</p>
-                </div>
-            </div>
-        </div>
+        </section>
         <section id="membership">
             <h2>
                 Join us!
             </h2>
             <div class="flex-container highlight"></div>
-                <div class="flex-item">
-                    <h3>
-                        Word member!
-                    </h3>
-                    <p>
-                        een verkooptekstje
-                    </p>
-                    <div class="flex-item"></div>
-                </div>
+            <div class="flex-item">
+                <h3>
+                    Word member!
+                </h3>
+                <p>
+                    een verkooptekstje
+                </p>
+                <div class="flex-item"></div>
+            </div>
         </section>
     </main>
 </body>
+
 </html>
