--- a/brandshop/index.html
+++ b/brandshop/index.html
@@ -107,5 +107,13 @@
             </div>
         </section>
     </main>
+    <footer>
+        <center>
+            <object data="footer/gmail.svg" height="50"></object>
+            <object data="footer/facebook.svg" height="50"></object>
+            <object data="footer/instagram.svg" height="50"></object>
+            <object data="footer/twitter.svg" height="50"></object>
+        </center> 
+    </footer>
 </body>
 </html>
