--- a/brandshop/index.html
+++ b/brandshop/index.html
@@ -113,7 +113,33 @@
             <object data="footer/facebook.svg" height="50"></object>
             <object data="footer/instagram.svg" height="50"></object>
             <object data="footer/twitter.svg" height="50"></object>
-        </center> 
+        </center>
+        <div class="flexcontainer">
+            <ul>
+                <li><a href="#">...</a>
+                Over merk</li>
+                <li><a href="#">...</a>winkels</li>
+                <li><a href="#">...</a>jobs</li>
+                <li><a href="#">...</a>ecologie</li>
+            </ul>
+            <ul>
+                <li><a href="#">...</a>
+                Over merk</li>
+                <li><a href="#">...</a>winkels</li>
+                <li><a href="#">...</a>jobs</li>
+                <li><a href="#">...</a>ecologie</li>
+            </ul>
+            <ul>
+                <li><a href="#">...</a>
+                Over merk</li>
+                <li><a href="#">...</a>winkels</li>
+                <li><a href="#">...</a>jobs</li>
+                <li><a href="#">...</a>ecologie</li>
+            </ul>
+        </div>
+        <div>
+            <a href="#"><i class=""></i></a>
+        </div>
     </footer>
 </body>
 </html>
