--- a/brandshop/index.html
+++ b/brandshop/index.html
@@ -114,7 +114,7 @@
             <object data="footer/instagram.svg" height="50"></object>
             <object data="footer/twitter.svg" height="50"></object>
         </center>
-        <div class="flexcontainer">
+        <div class="flex-container">
             <ul>
                 <li><a href="#">...</a>
                 Over merk</li>
