--- a/brandshop/index.html
+++ b/brandshop/index.html
@@ -130,8 +130,7 @@
                 <li><a href="#">...</a>ecologie</li>
             </ul>
             <ul>
-                <li><a href="#">...</a>
-                Over merk</li>
+                <li><a href="#">...</a>Over merk</li>
                 <li><a href="#">...</a>winkels</li>
                 <li><a href="#">...</a>jobs</li>
                 <li><a href="#">...</a>ecologie</li>
